--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command: grep -ow \"et\" at.txt | wc -l"
+    "The command: grep -ow \"et\" at.txt | wc -l\n"
    ]
   },
   {
@@ -465,10 +465,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "for file in lorem/*; do\n",
-    "    echo \"$file\"\n",
-    "    length=$(echo -n \"$file\" | wc -c)\n",
-    "    echo \"$file has $length characters length\"\n",
+    "for file in * ; do\n",
+    "    echo -n \"$file \"\n",
+    "    echo -n \"$file\" | wc -c\n",
     "done"
    ]
   },
@@ -504,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:sysctl -n machdep.cpu.brand_string"
    ]
   },
   {
@@ -520,7 +519,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:alias w=\"while\"  \n",
+    "            alias f=\"for\"\n",
+    "            alias t=\"then\""
    ]
   },
   {
@@ -536,7 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:tar -czvf lorem-compressed.tar.gz lorem lorem-copy\n"
    ]
   },
   {
@@ -552,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:tar -xzvf lorem-compressed.tar.gz -C lorem-uncompressed\n"
    ]
   },
   {
@@ -568,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:tar -xzvf lorem-compressed.tar.gz -C lorem-uncompressed"
    ]
   }
  ],
