--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -120,9 +120,7 @@
    "source": [
     "The command:\n",
     "mkdir lorem-copy \n",
-    "cd lorem\n",
-    "cp sed.txt sed-copy.txt \n",
-    "mv sed-copy.txt ../lorem-copy"
+    "cp sed.txt sed-copy.txt |mv sed-copy.txt ../lorem-copy"
    ]
   },
   {
@@ -469,7 +467,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "for file_name in * ; do echo ${#file_name} ; done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The command: ➜  for file in * ; do\n",
+    "    echo -n \"lorem has\"\n",
+    "    echo -n \"$file\" | wc -c\n",
+    "    echo -n \"characters lenght\"\n",
+    "\n",
+    "done"
    ]
   },
   {
@@ -504,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:sysctl -a | grep machdep.cpu"
    ]
   },
   {
