--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ echo \"Hello World\""
    ]
   },
   {
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ mkdir new_dir"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ rm -r new_dir"
    ]
   },
   {
@@ -70,7 +70,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ mkdir lorem-compy\n",
+    "             $ cp lorem/sed.txt lorem-copy/"
    ]
   },
   {
@@ -86,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ cp lorem/at.txt lorem/lorem.txt lorem-copy/"
    ]
   },
   {
@@ -102,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ cat sed.txt"
    ]
   },
   {
@@ -118,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ cat at.txt lorem.txt"
    ]
   },
   {
@@ -134,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ head -n3 sed.txt"
    ]
   },
   {
@@ -150,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ tail -n3 sed.txt"
    ]
   },
   {
@@ -166,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ echo \"Homo homini lupus\" >> sed.txt"
    ]
   },
   {
@@ -182,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ tail -n3 sed.txt"
    ]
   },
   {
@@ -198,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ sed -i 's/et/ET/g' lorem-copy/at.txt"
    ]
   },
   {
@@ -214,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ whoami"
    ]
   },
   {
@@ -230,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ pwd"
    ]
   },
   {
@@ -246,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ ls *.txt lorem"
    ]
   },
   {
@@ -262,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ wc lorem/sed.txt"
    ]
   },
   {
@@ -278,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ find . -type f -name \"lorem*\" | grep -c \"\""
    ]
   },
   {
@@ -294,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ grep \"et\" lorem/at.txt"
    ]
   },
   {
@@ -310,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ grep -o \"et\" lorem/at.txt | wc -l"
    ]
   },
   {
@@ -326,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ grep -o \"et\" lorem-copy/* | wc -l"
    ]
   },
   {
@@ -349,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ name=Uri"
    ]
   },
   {
@@ -365,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ echo $name"
    ]
   },
   {
@@ -381,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ mkdir $name"
    ]
   },
   {
@@ -397,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ rm -r $name"
    ]
   },
   {
@@ -417,7 +418,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ for file in lorem/*; do echo \"$file\"; done\n",
+    "             $ for file in lorem/*; do echo \"${#file}\"; done\n",
+    "             $ for file in lorem/*; do echo \"$file has ${#file} characters length\"; done"
    ]
   },
   {
@@ -436,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ ps axjf"
    ]
   },
   {
@@ -452,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ msinfo32"
    ]
   },
   {
@@ -468,7 +471,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ alias ll='ls -alF'\n",
+    "             $ alias gs='git status'\n",
+    "             $ alias k='clear'"
    ]
   },
   {
@@ -484,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tar -czvf lorem-compressed.tar.gz lorem lorem-copy"
    ]
   },
   {
@@ -500,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ mkdir lorem-uncompressed && tar -xzvf lorem-compressed.tar.gz -C lorem-uncompressed"
    ]
   },
   {
@@ -516,7 +521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ mkdir lorem-uncompressed && tar -xzvf lorem-compressed.tar.gz -C lorem-uncompressed"
    ]
   }
  ],
@@ -536,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.5"
   },
   "nbTranslate": {
    "displayLangs": [
